openshift/reference/platform/namespace.yaml
{
  "apiVersion": "v1",
  "kind": "Namespace",
  "metadata": {
    "name": "dda-sso"
  }
}
