openshift/reference/platform/allow-dns.yaml
{
  "apiVersion": "networking.k8s.io/v1",
  "kind": "NetworkPolicy",
  "metadata": {
    "name": "allow-dns",
    "namespace": "dda-sso",
    "labels": {
      "app.kubernetes.io/part-of": "dda-sso",
      "app.kubernetes.io/name": "platform"
    }
  },
  "spec": {
    "podSelector": {},
    "policyTypes": [
      "Egress"
    ],
    "egress": [
      {
        "to": [
          {
            "namespaceSelector": {
              "matchLabels": {
                "kubernetes.io/metadata.name": "openshift-dns"
              }
            }
          }
        ],
        "ports": [
          {
            "port": 5353,
            "protocol": "UDP"
          },
          {
            "port": 5353,
            "protocol": "TCP"
          },
          {
            "port": 53,
            "protocol": "UDP"
          },
          {
            "port": 53,
            "protocol": "TCP"
          }
        ]
      }
    ]
  }
}
